syntax = "proto3";
import "google/protobuf/any.proto";

message BrokerMessage {
  string uuid = 1;
  string origin = 2;
  string message_class = 3;
  google.protobuf.Any payload = 4;
}
