syntax = "proto3";

message FinalizeInvoice {
  repeated string invoice_ids = 1;
}